--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -108,7 +108,7 @@ body{
 
 #text-container {
   margin-left: 125px;
-  margin: 0 auto;
+  margin: -200px auto 0 auto;
   width: 90vw;
 }
 
